# openms-layout-redesign

./: CMakeLists.txt
cmake/: OpenMSBuildSystem_configh.cmake  OpenMSBuildSystem_doc.cmake  OpenMSBuildSystem_externalLibs.cmake  OpenMSBuildSystem_macros.cmake
doc/: CMakeLists.txt
doc/code_examples/: executables.cmake
openms/: CMakeLists.txt
openms/include/OpenMS/: config.h.in
openms/include/OpenMS/ANALYSIS/ID/: IDMapper.h
openms/include/OpenMS/DATASTRUCTURES/: Param.h
openms/source/ANALYSIS/ID/: ConsensusID.C
openms/source/APPLICATIONS/: ToolHandler.C
openms/source/DATASTRUCTURES/: DataValue.C
openms/source/SIMULATION/: IonizationSimulation.C
openms/source/SIMULATION/LABELING/: ITRAQLabeler.C
openms/source/SYSTEM/: File.C
openms/source/TEST/: CMakeLists.txt
openms_gui/: CMakeLists.txt  qt_wrap_ui.cmake
openms_gui/source/VISUAL/: ParamEditor.C
src/openms/include/OpenMS/DATASTRUCTURES/: DataValue.h  String.h
src/openms/include/OpenMS/METADATA/: ProteinIdentification.h
src/openms/source/ANALYSIS/MAPMATCHING/: LabeledPairFinder.C
src/openms/source/ANALYSIS/QUANTITATION/: PeptideAndProteinQuant.C  ProteinResolver.C
src/openms/source/ANALYSIS/TARGETED/: InclusionExclusionList.C
src/openms/source/APPLICATIONS/: INIUpdater.C
src/openms/source/DATASTRUCTURES/: Param.C
src/openms/source/SIMULATION/LABELING/: BaseLabeler.C
src/tests/class_tests/source/: BilinearInterpolation_test.C  ChromatogramExtractorAlgorithm_test.C  ChromatogramExtractor_test.C  ConfidenceScoring_test.C  ControlledVocabulary_test.C  DataValue_test.C  DocumentIdentifier_test.C  EGHTraceFitter_test.C  EnzymaticDigestion_test.C  FeatureGroupingAlgorithmLabeled_test.C  Feature_test.C  GaussFilterAlgorithm_test.C  GaussTraceFitter_test.C  IdXMLFile_test.C  IndexedMzMLFile_test.C  IntList_test.C  IonizationSimulation_test.C  ItraqConstants_test.C  ItraqQuantifier_test.C  LinearInterpolation_test.C  LogConfigHandler_test.C  MRMFeatureFinderScoring_test.C  MRMFeature_test.C  MRMFragmentSelection_test.C  MRMTransitionGroupPicker_test.C  MSExperiment_test.C  MascotXMLFile_test.C  MassTrace_test.C  MzMLFile_test.C  MzMLSpectrumDecoder_test.C  MzXMLFile_test.C  O18Labeler_test.C  OMSSAXMLFile_test.C  OnDiscMSExperiment_test.C  OpenSwathHelper_test.C  Param_test.C  ParameterInformation_test.C  ProteinIdentification_test.C  RTSimulation_test.C  RangeUtils_test.C  (+5 more)
src/tests/topp/: CMakeLists.txt
tests/class_tests/: CMakeLists.txt  executables.cmake
tests/class_tests/source/: AccurateMassSearchEngine_test.C  Base64_test.C  ConsensusXMLFile_test.C  CsvFile_test.C  DataValue_test.C  DetectabilitySimulation_test.C  DoubleList_test.C  FeatureDeconvolution_test.C  FeatureGroupingAlgorithmLabeled_test.C  FeatureXMLFile_test.C  File_test.C  FuzzyStringComparator_test.C  HiddenMarkovModel_test.C  INIUpdater_test.C  ITRAQLabeler_test.C  InclusionExclusionList_test.C  IsobaricChannelExtractor_test.C  IsobaricQuantitationMethod_test.C  ItraqChannelExtractor_test.C  LabeledPairFinder_test.C  LogStream_test.C  MRMDecoy_test.C  MRMRTNormalizer_test.C  ModificationDefinitionsSet_test.C  ModifiedPeptideGenerator_test.C  ParamXMLFile_test.C  PeakPickerHiRes_test.C  PepXMLFile_test.C  PrecursorIonSelectionPreprocessing_test.C  ProtXMLFile_test.C  SVOutStream_test.C  SpectraMerger_test.C  StatisticFunctions_test.C  TOPPBase_test.C  ToolHandler_test.C  VersionInfo_test.C  XMassFile_test.C
tests/topp/: CMakeLists.txt
(+4 files in other folders)
